
-----------------------------------------------------------------------
Version 3.0.0   11/08/2008 
-----------------------------------------------------------------------

* Fixed bug 2219380 - Lucene: SQL SERVER - Cannot resolve collation 
conflict UNION

* Fixed bug with non-admin users who have permission to add users.

* Fixed bug with logic (regular expression) that turns URLs into links.


-----------------------------------------------------------------------
Version 2.9.9   11/01/2008 
-----------------------------------------------------------------------

* IMPORTANT: Check you Web.config settings related to date formats
if you have a problem with this release.  Keep reading:

* Now using the jQuery javascript library.  Changed the calendar popup 
to the jQuery datepicker. It uses  Web.config "DatepickerDateFormat" to
decide which date format the picker puts into the input field.

Please read the comments in this new Web.config related to the settings
"DatepickerDateFormat", "DateTimeFormat", and "JustDateFormat".  
and the comments about them in the Web.config in this zip.

Historically, I've tended to make mistakes with non-US date formats, so
be suspicious.

The logic now tries to guess when to display just the date and when to
display both the date and time.

* Fixed bug where the display of the popup was truncated if the window
was scrolled down from the top.

* Catching exception "Request is not available in this context" when
Application_Start references the Request object on IIS7 in "Integrated"
mode.  Google the error message for more info.

* Fixed bug 1239351 "SQL saved from search can have incorrect date
format"

* Fixed bug 2189739 "'Seen' field appears in print and export to excel
results:

* Fixed bug 2207549 "HTML tags bug in edit_customfield.aspx"

* Fixed bug with custom dropdowns based on char datatypes not working 
because of the values from the db being padded with spaces. 

* Fixed cosmetic bug, missing form border in IE.
